files align fix

--- a/core/css/server.css
+++ b/core/css/server.css
@@ -1664,7 +1664,7 @@ button.edit-output-dir span.icon-rename,
     letter-spacing: 1px;
 }
 #filestable thead {
-    background-color: white !important;
+    background-color: var(--color-main-background-header) !important;
 }
 #recommendations {
     height: 100px !important;
@@ -1744,4 +1744,8 @@ body.theme--dark.theme--highcontrast #header .notifications-button.hasNotificati
 body.theme--dark.theme--highcontrast #header #appmenu li:hover a,
 body.theme--dark.theme--highcontrast #header #appmenu li:focus a {
     color: #000;
+}
+/* Files App */
+#content.app-files #filestable {
+    padding-top: 20px;
 }
